# scopehal

scopeexports/: CMakeLists.txt  CSVExportWizard.cpp  CSVExportWizard.h  TouchstoneExportWizard.cpp  TouchstoneExportWizard.h  VCDExportWizard.cpp  VCDExportWizard.h
scopehal/: AcceleratorBuffer.cpp  AcceleratorBuffer.h  AgilentOscilloscope.cpp  AgilentOscilloscope.h  AlignedAllocator.h  AntikernelLabsOscilloscope.cpp  AntikernelLabsOscilloscope.h  AntikernelLogicAnalyzer.cpp  AntikernelLogicAnalyzer.h  Bijection.h  CDR8B10BTrigger.cpp  CDR8B10BTrigger.h  CDRNRZPatternTrigger.cpp  CDRTrigger.cpp  CDRTrigger.h  CMakeLists.txt  ComputePipeline.cpp  DCAEdgeTrigger.cpp  DCAEdgeTrigger.h  DSLabsOscilloscope.cpp  DSLabsOscilloscope.h  DemoOscilloscope.cpp  DemoOscilloscope.h  DigilentOscilloscope.cpp  DropoutTrigger.cpp  DropoutTrigger.h  EdgeTrigger.cpp  EdgeTrigger.h  ExportWizard.cpp  ExportWizard.h  Filter.cpp  Filter.h  FilterGraphExecutor.cpp  FilterGraphExecutor.h  FilterParameter.cpp  FilterParameter.h  FlowGraphNode.cpp  FlowGraphNode.h  FunctionGenerator.cpp  FunctionGenerator.h  (+123 more)
scopeprotocols/: ACCoupleFilter.cpp  ACCoupleFilter.h  ACRMSMeasurement.cpp  ACRMSMeasurement.h  ADL5205Decoder.cpp  ADL5205Decoder.h  AutocorrelationFilter.cpp  AutocorrelationFilter.h  AverageStatistic.cpp  AverageStatistic.h  BINImportFilter.cpp  BINImportFilter.h  BaseMeasurement.cpp  BaseMeasurement.h  BurstWidthMeasurement.cpp  BurstWidthMeasurement.h  CANDecoder.cpp  CANDecoder.h  CMakeLists.txt  CSVImportFilter.cpp  CSVImportFilter.h  CTLEFilter.cpp  CTLEFilter.h  ChannelEmulationFilter.cpp  ChannelEmulationFilter.h  ClockRecoveryFilter.cpp  ClockRecoveryFilter.h  ComplexImportFilter.cpp  ComplexImportFilter.h  CurrentShuntFilter.cpp  CurrentShuntFilter.h  DCDMeasurement.cpp  DCDMeasurement.h  DCOffsetFilter.cpp  DCOffsetFilter.h  DDJMeasurement.cpp  DDJMeasurement.h  DDR1Decoder.cpp  DDR1Decoder.h  DDR3Decoder.cpp  (+271 more)
